--- a/root/index.html
+++ b/root/index.html
@@ -2,43 +2,105 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="assets/css/styles.css">
-<title> Quentin Ware-Bey's Practice Page </title>
-</head>
+	<title> Quentin Ware-Bey's Page </title>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-		<body>
-<h1> Quentin Ware-Bey </h1>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
 
-	<hr>
-		<div id="gallery-text-left" style="float:left">
-			<p> &nbsp; &nbsp; &nbsp; &nbsp; My name is Quentin Ware-Bey.  I was born and raised in Cleveland, Ohio.  I am a big sports fan and enjoy working out in my spare time. I attended and received a Business Degree from Edinboro University of Pennsylvania.</p>
+</head>
+
+<body>
+	<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">Quentin's Website</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Other Pages <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#";> <a href= "photos.html"> Pictures </a></li>
+            <li><a href="#"> <a href= "email.html"> Email</a></li>
+          </ul>
+        </li>
+      
+    </div>
+  </div>
+</nav>
+	<div class="container">
+		<h1> Welcome to my page </h1>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<hr>
+				<p> &nbsp; &nbsp; &nbsp; &nbsp; My name is Quentin Ware-Bey.  I was born and raised in East Cleveland, Ohio.  I am a big sports fan and enjoy working out in my spare time. I attended and received a Business Degree from Edinboro University of Pennsylvania.</p>
+			</div>
+
+			<div class="col-sm-6">
+				<hr>
+				<p> &nbsp; &nbsp; &nbsp; &nbsp; I am a former professional football player, having spent time in the Arena League and short stints in the Canadian as well as numerous NFL tryouts.  I have provided an old image below from my time spent playing in the Arena League for the Green Bay Blizzard. </p>
+			</div>
+
+
+			
+
+		</div>
+			<hr>
+		<div class="row">
+			<div class="col-xs-4">
+				<img src="assets/img/StarWarsHelmets.jpg" alt="Star Wars"
+				>
+			</div>
+
+			<div class="col-xs-4">
+				<img src="assets/img/DarthMaul.jpg" alt="Darth Maul"
+				>
+			</div>
+
+			<div class="col-xs-4">
+				<img src="assets/img/Lightsaber.jpg" alt="Lightsaber"
+				>
+			</div>
 		</div>
 
-	<hr>
-		<div id="gallery-text-right" style="float:left">
-			<p> &nbsp; &nbsp; &nbsp; &nbsp; I am a former professional football player, having spent time in the Arena League and short stints in the Canadian as well as numerous NFL tryouts.  I have provided an old image below from my time spent playing in the Arena League for the Green Bay Blizzard. </p>
-		</div>
-	<div>
-		<center><img src="assets/img/QblizzardTD.jpg" alt="Blizzard Football" height="100" width-"100"></center>
-	</div>
+		
 
-	<table style="width:100%">
-		<tr>
-			<td> reading </td>
-			<td> running </td>
-			<td> coding </td>
-				</tr>
-	</table>
+		<table style="width:100%">
+			<tr>
+				<td> reading </td>
+				<td> running </td>
+				<td> coding </td>
+			</tr>
+
+		</table>
 
 		<div>
 			<ul>
-			<li> reading </li>
-			<li> running </li>
-			<li> coding </li>
-				</ul>
+				<li> reading </li>
+				<li> running </li>
+				<li> coding </li>
+			</ul>
 		</div>
 
-				<p><small>Copyright 2015 Quentin Ware-Bey</small> </p>
-		</body>
+	<footer>
+    	<p>Github page: <a href="https://github.com/warebey17" target="_blank">github.com/warebey17</a></p>
+  	</footer>
+
+
+
+		<p><small>&copy; 2016 Quentin Ware-Bey</small> </p>
+	</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+   <script src="assets/js/bootstrap.min.js"></script>
+	
+</body>
 </html>
