Revised homework assignment 2

--- a/root/index.html
+++ b/root/index.html
@@ -39,12 +39,12 @@
 		<h1> Welcome to my page </h1>
 
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-md-6 col-xs-12">
 				<hr>
 				<p> &nbsp; &nbsp; &nbsp; &nbsp; My name is Quentin Ware-Bey.  I was born and raised in East Cleveland, Ohio.  I am a big sports fan and enjoy working out in my spare time. I attended and received a Business Degree from Edinboro University of Pennsylvania.</p>
 			</div>
 
-			<div class="col-sm-6">
+			<div class="col-md-6 col-xs-12">
 				<hr>
 				<p> &nbsp; &nbsp; &nbsp; &nbsp; I am a former professional football player, having spent time in the Arena League and short stints in the Canadian as well as numerous NFL tryouts.  I have provided an old image below from my time spent playing in the Arena League for the Green Bay Blizzard. </p>
 			</div>
@@ -54,41 +54,32 @@
 
 		</div>
 			<hr>
-		<div class="row">
-			<div class="col-xs-4">
+		
+			<div class="col-md-4 col-xs-12">
 				<img src="assets/img/StarWarsHelmets.jpg" alt="Star Wars"
 				>
+				<hr>
 			</div>
+			
 
-			<div class="col-xs-4">
+			<div class="col-md-4 col-xs-12">
 				<img src="assets/img/DarthMaul.jpg" alt="Darth Maul"
 				>
+				<hr>
 			</div>
+			
 
-			<div class="col-xs-4">
+			<div class="col-md-4 col-xs-12">
 				<img src="assets/img/Lightsaber.jpg" alt="Lightsaber"
 				>
+				<hr>
 			</div>
+		
 		</div>
 
 		
 
-		<table style="width:100%">
-			<tr>
-				<td> reading </td>
-				<td> running </td>
-				<td> coding </td>
-			</tr>
-
-		</table>
-
-		<div>
-			<ul>
-				<li> reading </li>
-				<li> running </li>
-				<li> coding </li>
-			</ul>
-		</div>
+		
 
 	<footer>
     	<p>Github page: <a href="https://github.com/warebey17" target="_blank">github.com/warebey17</a></p>
