--- a/root/photos.html
+++ b/root/photos.html
@@ -64,56 +64,56 @@
     </div>
       <hr>
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-md-3 col-md-6">
         <img src="assets/img/ACsyndicate1.jpg" alt="Syndicate1">
         <hr>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-md-3 col-md-6">
         <img src="assets/img/ACsyndicate2.jpg" alt="Syndicate2">
         <hr>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-md-3 col-sm-6">
         <img src="assets/img/ACblackflag1.jpg" alt="Blackflag1">
         <hr>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-md-3 col-sm-6">
         <img src="assets/img/ACblackflag2.jpg" alt="Blackflag2">
         <hr>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-md-3 col-sm-6">
         <img src="assets/img/ACsyndicate3.jpg" alt="Syndicate3">
         <hr>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-md-3 col-sm-6">
         <img src="assets/img/ACsyndicate5.jpg" alt="Syndicate5">
         <hr>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-md-3 col-sm-6">
         <img src="assets/img/ACblackflag3.jpg" alt="Blackflag3">
         <hr>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-md-3 col-sm-6">
         <img src="assets/img/ACblackflag4.jpg" alt="Blackflag4">
         <hr>
       </div>
     </div>
 
 <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-xs-12">
         <img src="assets/img/ACsyndicate6.jpg" alt="Syndicate6">
         <hr>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-xs-12">
         <img src="assets/img/ACblackflag5.jpg" alt="Blackflag5">
         <hr>
       </div>
