--- a/root/email.html
+++ b/root/email.html
@@ -39,42 +39,45 @@
 <div class="container">
     <h1> Contact Page </h1>
     <hr>
+        <div class="row">
+          <div class="col-lg-12 col-xs-12">
+          </div>
+            <form action="mailto:warebey17@gmail.com" method="post" enctype="text/plain">
 
-<form action="mailto:warebey17@gmail.com" method="post" enctype="text/plain">
-
-<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="4" WIDTH="90%">
-<TR>
-<TD width="30%"><DIV align="right">
-<B>Name:</B>
-</DIV>
-</TD>
-<TD width="70%">
-<INPUT type="text" name="name" size="20">
-</TD>
-</TR>
-<TR>
-<TD><DIV align="right"><B>Email:</B></DIV>
-</TD>
-<TD>
-<INPUT type="text" name="email" size="20">
-</TD>
-</TR>
-<TR>
-<TD><DIV align="right">
-<B>Comment:</B>
-</DIV>
-</TD>
-<TD><TEXTAREA name="comment" cols="30" wrap="virtual" rows="4">
-</TEXTAREA>
-</TD></TR>
-<TR>
-<TD>&nbsp;</TD>
-<TD>
-<INPUT type="submit" name="submit" value="Submit">
-<INPUT type="reset" name="reset" value="Reset">
-</TD></TR>
-</TABLE>
-</FORM>
+            <TABLE BORDER="0" CELLSPACING="0" CELLPADDING="4" WIDTH="90%">
+            <TR>
+            <TD width="30%"><DIV align="right">
+            <B>Name:</B>
+            </DIV>
+            </TD>
+            <TD width="70%">
+            <INPUT type="text" name="name" size="20">
+            </TD>
+            </TR>
+            <TR>
+            <TD><DIV align="right"><B>Email:</B></DIV>
+            </TD>
+            <TD>
+            <INPUT type="text" name="email" size="20">
+            </TD>
+            </TR>
+            <TR>
+            <TD><DIV align="right">
+            <B>Comment:</B>
+            </DIV>
+            </TD>
+            <TD><TEXTAREA name="comment" cols="30" wrap="virtual" rows="4">
+            </TEXTAREA>
+            </TD></TR>
+            <TR>
+            <TD>&nbsp;</TD>
+            <TD>
+            <INPUT type="submit" name="submit" value="Submit">
+            <INPUT type="reset" name="reset" value="Reset">
+            </TD></TR>
+            </TABLE>
+            </FORM>
+        </div>
 
 <hr>
 
